k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiketi-staging
  labels:
    name: tiketi-staging
    environment: staging
